@@ -1793,9 +1793,6 @@ elf64_x86_64_allocate_dynrelocs (struct elf_link_hash_entry *h, void * inf)
 	  return TRUE;
 	}
 
-      if (h->plt.refcount <= 0)
-	abort ();
-
       /* When building a static executable, use .iplt, .igot.plt and
 	 .rela.iplt sections for STT_GNU_IFUNC symbols.  */
       if (htab->splt != 0)
