@@ -1,5 +1,11 @@
 2009-06-03  H.J. Lu  <hongjiu.lu@intel.com>
 
+	* elf32-i386.c (elf_i386_allocate_dynrelocs): Remove check of
+	h->plt.refcount > 0 on STT_GNU_IFUNC symbol.
+	* elf64-x86-64.c (elf64_x86_64_allocate_dynrelocs): Likewise.
+
+2009-06-03  H.J. Lu  <hongjiu.lu@intel.com>
+
 	* elf32-i386.c (elf_i386_allocate_dynrelocs): Allocate
 	GOT entry for STT_GNU_IFUNC symbol with pointer equality.
 	(elf_i386_relocate_section): Adjust R_386_GOT32 relocation
